<resources>
    <string name="app_name">Castle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Page labels -->
    <string name="login_label">Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_reenter">Retype Password</string>
    <string name="prompt_name">Full Name</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_message">Login to access your reports and templates, or register to begin using Castle&#174;</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
</resources>
